syntax = "proto3";

import "messages.proto";

package erx.api;
option csharp_namespace = "DemoExchange.Api";

service AccountService {
  rpc List(Empty) returns (AccountList);

  rpc CreateAccount(AccountRequest) returns (AccountResponse);
  rpc CreateAddress(AddressRequest) returns (AddressResponse);

  rpc CanFillOrder(CanFillOrderRequest) returns (CanFillOrderResponse);
}
